implementations/v2.0/allow-external-to-istio-ingressgateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-to-istio-ingressgateway
  namespace: istio-system
spec:
  podSelector:
    matchLabels:
      app: istio-ingressgateway
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 8080 
    - protocol: TCP
      port: 8443 
    - protocol: TCP
      port: 15021
